<resources>
    <string name="app_name">app_inventario_arquitectura</string>
    <string name="usuario"> usuario </string>
    <string name="contraseña"> Contraseña </string>
    <string name="textoEmpresa">Bienvenidos a SGET </string>
    <string name="resumen"> Gestiona, controla y mantén al día tus equipos. </string>
    <string name="hint_password">contraseña</string>
    <string name="hint_usuario">Digitar usuario</string>
    <string name="resumen_descripcion">Descripción del resumen que será leída por los lectores de pantalla.</string>

    <string name="Numero_Serial">Número de Serial</string>
    <string name="Ing_Numero_Serial">Ingrese el número de Serial</string>
    <string name="Tipo_Equipo">Tipo De Equipo</string>
    <string name="Ing_Tipo_Equipo">Ingrese Tipo De Equipo</string>
    <string name="Modelo">Modelo</string>
    <string name="Ing_Modelo">Ingrese Modelo</string>
    <string name="Imagen_Equipo">Imagen Del Equipo</string>
    <string name="Cargar_Imagen_Equipo">Cargar Imagen</string>
    <string name="Vigencia">Vigencia en Meses</string>
    <string name="Ing_Vigencia">Ingrese Vigencia</string>
    <string name="instruccion_consulta_equipo">Por favor, ingrese el número de serie y presione "Buscar" para cargar los datos.</string>

    <string name="Cod__Obra">Codigo de la Obra</string>
    <string name="Ing_Cod__Obra">Ingrese el Codigo de la Obra</string>
    <string name="Nombre_Obra">Nombre de la Obra</string>
    <string name="Ing_Nom__Obra">Ingrese el Nombre de la Obra</string>
    <string name="Nombre_Cliente">Cliente de la Obra</string>
    <string name="Ing_Nom__Cliente">Ingrese el Cliente de la Obra</string>
    <string name="Ub_Departamente">Ubicación del Departamento de la Obra</string>
    <string name="Ing_Departamento">Departamento</string>
    <string name="Ub_Ciudad">Ubicación de la Ciudad de la Obra</string>
    <string name="Ing_Ciudad">Ciudad</string>
    <string name="instruccion_consulta_Obra">Por favor, ingrese el número de obra y presione "Buscar" para cargar los datos.</string>


    <string name="titlePanelControl">Panel de Control</string>
    <string name="titleCrear">Crear</string>
    <string name="titleEliminar">Eliminar</string>
    <string name="titleEditar">Editar</string>
    <string name="titleEditarConsultar">Editar o Consultar</string>


    <!--  Botones -->
    <string name="btnIngresar"> Ingresa </string>
    <string name="btnGuardar"> Guardar </string>
    <string name="btnBuscar"> Buscar </string>
    <string name="btnEliminar"> Eliminar </string>
    <string name="btn_cancelar"> Cancelar </string>
    <string name="btn_gestion_equipos">Gestion de Equipos</string>
    <string name="btn_gestion_obras">Gestion de Obras</string>
    <string name="btn_gestion_Movimientos_De_equipos">Movimeintos De Equipos</string>
    <string name="btn_gestion_Usuarios">Administracion de Usuarios</string>


    <!-- Campos de Fecha -->
    <string name="Sel_Fecha_Adquisicion"> Seleccionar Fecha De Adquisicion </string>
    <string name="Fecha_Adquisicion"> Fecha De Adquisicion </string>
    <string name="Sel_Fecha_Certificacion"> Seleccionar Fecha De Certificacion </string>
    <string name="Fecha_Certificacion"> Fecha De Certificacion </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="instruccion_au">Por favor, ingrese el correo electronico y presione "Buscar" para cargar los datos.</string>




</resources>