<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crearObras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_ingreso"
    tools:context="com.example.app_inventario_arquitectura.go_crear_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/crear_obras"
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/titleCrear" />

        <!-- Codigo de Obra -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Cod__Obra"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCodigoObra"
            style="@style/estilo_letra_cuadro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ing_Cod__Obra"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Campo de Nombre de Obra -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Nombre_Obra"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNombreObra"
            style="@style/estilo_letra_cuadro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ing_Nom__Obra"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Campo de Cliente de Obra -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Nombre_Cliente"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etClienteObra"
            style="@style/estilo_letra_cuadro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ing_Nom__Cliente"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Campo de Departamento De Obra -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Ub_Departamente"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDepartamentoObra"
            style="@style/estilo_letra_cuadro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ing_Departamento"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Campo Ciudad de la Obra -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Ub_Ciudad"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCiudad"
            style="@style/estilo_letra_cuadro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ub_Ciudad"
            android:inputType="text" />

        <!-- Botones para Guardar y Cancelar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardar"
                style="@style/estilo_boton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/btnGuardar"
                app:icon="@drawable/ic_guardar"
                app:iconSize="15dp"
                app:iconTint="#9DA68C"
                app:strokeColor="@color/colortexto"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelar"
                style="@style/estilo_boton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/btn_cancelar"
                app:icon="@drawable/ic_cancelar"
                app:iconSize="15dp"
                app:iconTint="#9DA68C"
                app:strokeColor="@color/colortexto"
                app:strokeWidth="1dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>