<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_ingreso"
    tools:context="com.example.app_inventario_arquitectura.ge_Eliminar_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/eliminar_gestion"
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/titleEliminar"
            />

        <!-- Campo de Número de Serie -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Numero_Serie"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNumeroSerie"
            style="@style/estilo_letra_cuadro"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Ing_Numero_Serie"
            android:inputType="text|number"
            android:autofillHints="text|number"
            android:maxLines="1" />

        <!-- Campo de Tipo de Equipo -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Tipo_Equipo"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/etTipoEquipo"
            style="@style/estilo_letra_cuadro"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:hint="@string/Tipo_Equipo"
 />

        <!-- Campo de Fecha de Adquisición -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Fecha_Adquisicion"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/etFechaAdquisicion"
            style="@style/estilo_letra_cuadro"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:focusable="false"
            android:hint="@string/Fecha_Adquisicion"
            android:onClick="showDatePicker" />

        <!-- Campo de Fecha de Certificacion -->
        <TextView
            style="@style/estilo_letra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Fecha_Certificacion"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/etFechaCertificacion_Eliminar"
            style="@style/estilo_letra_cuadro"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cuadro_recbir_texto"
            android:focusable="false"
            android:hint="@string/Fecha_Certificacion"
            android:onClick="showDatePicker" />

        <!-- Indicador de Error -->
        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Error: Complete todos los campos"
            android:textColor="@color/colorError"
            android:visibility="gone" />

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

            <!-- Botones Guardar, Eliminar y Cancelar -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBuscar"
                    style="@style/estilo_boton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buscar"
                    android:text="Buscar" />

                <Button
                    android:id="@+id/btnEliminar"
                    style="@style/estilo_boton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:onClick="eliminar"
                    android:text="@string/btnEliminar" />

                <Button
                    android:id="@+id/btnCancelar"
                    style="@style/estilo_boton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:onClick="cancelar"
                    android:text="Cancelar" />
            </LinearLayout>

    </LinearLayout>
</FrameLayout>
