<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_ingreso"
    tools:context="com.example.app_inventario_arquitectura.panelDeControlFragment">

    <!-- Barra superior -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo_ingreso"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Panel De Gestion"
        app:titleCentered="true"
        app:titleTextColor="@color/colortexto"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

    <!-- Layout del Menú con espaciado equitativo entre botones -->
    <LinearLayout
        android:id="@+id/Layout_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar_panel">

        <!-- Espaciador superior -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón para Gestión de Equipos -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGestionEquipos"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_gestion_equipos"
            app:cornerRadius="16dp"
            app:icon="@drawable/equipos"
            app:iconSize="15dp"
            app:iconTint="@color/colortexto"
            app:strokeColor="#9DA68C"
            app:strokeWidth="1dp" />


        <!-- Espaciador entre botones -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón para Gestión de Obras -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGestionObras"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_gestion_obras"
            android:textColor="@color/colortexto"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_obras"
            app:iconSize="15dp"
            app:iconTint="@color/colortexto"
            app:strokeColor="@color/colortexto"
            app:strokeWidth="1dp" />

        <!-- Espaciador entre botones -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón para Control de Entradas y Salidas -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnControlEntradasSalidas"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_gestion_Movimientos_De_equipos"
            android:textColor="@color/colortexto"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_in_and_out"
            app:iconSize="15dp"
            app:iconTint="@color/colortexto"
            app:strokeColor="@color/colortexto"
            app:strokeWidth="1dp" />

        <!-- Espaciador entre botones -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón para Administrador de Usuarios -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdminUsuarios"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_gestion_Usuarios"
            android:textColor="@color/colortexto"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_user"
            app:iconSize="15dp"
            app:iconTint="@color/colortexto"
            app:strokeColor="@color/colortexto"
            app:strokeWidth="1dp" />

        <!-- Espaciador inferior -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
